--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -50,7 +50,7 @@
         <!--TitlePanel 包含应用程序的名称和页标题-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="腾讯微博挖掘" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
-            <TextBlock Text="用户授权" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" Tap="TextBlock_Tap"/>
+            <TextBlock Text="用户授权" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
