--- a/DetailPage.xaml
+++ b/DetailPage.xaml
@@ -40,8 +40,7 @@
                 <RowDefinition Height="30" />
                 <RowDefinition Height="30" />
                 <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             
             <TextBlock Grid.Column="0" Grid.Row="0" Text="Name" HorizontalAlignment="Right" Margin="0,0,5,0" />
@@ -64,6 +63,10 @@
 
             <TextBlock Grid.Column="0" Grid.Row="6" Text="OpenId" HorizontalAlignment="Right" Margin="0,0,5,0" />
             <TextBlock Grid.Column="1" Grid.Row="6" Name="txtOpenId" HorizontalAlignment="Left" Margin="5,0,0,0" />
+            
+            <ScrollViewer Grid.ColumnSpan="2" Grid.Row="7">
+                <TextBlock Name="txtMsg" />
+            </ScrollViewer>
         </Grid>
     </Grid>
 
